--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+.myBase {
+	border-bottom:	10px;
+	color:			red;
+}
+.myBaseChild extends  .myBase, #cl2 {
+	border:			20px;
+	border-bottom:	12px;
+}
+
+.myLastChild extends .myBaseChild {
+	color:green;
+}
+
+
+
 .cl1 {
 	color:blue;
 	background: white;
